src/index.css
body 
{ margin: 0;
  padding: 0;
  font-family: sans-serif; }

.AmaticSC
{ font-family: 'Amatic SC', cursive; }

.Pacifico
{ font-family: 'Pacifico', cursive; }

.PoiretOne
{ font-family: 'Poiret One', cursive; }

.Header
{ padding: 12vh 0;
  background-image: url('./assets/background.png');
  background-size: 100vw;
  background-position: top;
  background-repeat: no-repeat;
  text-align: center; 
  color: #9888ae }

.headerTitle
{ padding: 3vh 0; }

.mainTitle
{ font-size: 7vh; }

.subTitle
{ font-size: 5vh;
  margin: -3vh 0; 
  color: #999}

.sectionTitle
{ color: #dcbc91;
  font-size: 7vh; }

.Navigation .mainNav
{ background-color: rgba(255,255,255,0);
  margin: 0 auto; 
  border: 0px; }

.Navigation
{ margin-bottom: 5vh; }

.Navigation .navLine
{ height: 2px;
  width: 50vw;
  background-color: #9888ae; 
  margin: 0 auto; }

.Navigation .navbar-collapse 
{ border: 0; }

.Navigation .navbar-inverse .navbar-nav>li>a
{ color: #9888ae; 
  font-size: 15px; }

.Navigation .navbar-inverse .navbar-nav>li>a:hover
{ color: rgba(152, 136, 174, 0.5); }

.PlainNav .mainNav
{ background-color: #9888ae;
  border-radius: 0px;
  border: 0px; }

.PlainNav .navbar-toggle
{ margin: 0;  
  float: left; }

.PlainNav .navbar-brand
{ color: #fff; }

.PlainNav .navbar-inverse .navbar-nav>li>a
{ color: #fff; 
  font-size: 15px; }

.PlainNav .navbar-inverse .navbar-nav>li>a:hover
{ color: rgba(255, 255, 255, 0.5); }

.PlainNav .pNavItem
{ display: inline-block;
  margin: 0 20px; }

.PlainNav .pNavItem a
{ color: #fff; }

.PlainNav .pNavItem a:hover 
{ text-decoration: none; }

.Countdown
{ margin: 10px auto;
  padding-bottom: 20px; }

.Countdown-col
{ display: inline-block; }

.Countdown-col-element
{ display: inline-block;
  margin: 0 20px;
  display: flex;
  flex-direction: column; }

.countdownNumber
{ font-size: 5vh;
  color: #dcbc91 }
  
.headerPhoto 
{ height: 80vh;
  width: 90vw;
  margin: 0 auto;
  background-image: url('./assets/headerPhoto.jpg');
  background-size: cover;
  background-position: center;
}

.OurWedding
{ margin: 0 auto;
  padding: 3vh;
  padding-bottom: 20vh;
  width: 70vw;
  text-align: center }

.OurWedding p
{ font-size: 3vh;
  color: #555; }

.mapWrapper
{ padding: 2vh; }

.map 
{ height: 30vh; 
  background-color: #aaa; }

.mapDescription
{ color: rgba(0,0,0,0.6); }

.mapDescription p
{ font-size: 18px; }

.rsvp
{ text-align: center; 
  height: 100vh; 
  background-image: url('./assets/rsvp2.jpg'); 
  background-size: cover;
  background-position: center;
  color: rgba(255,255,255,0.7);
  padding-top: 20vh; }

.rsvp p
{ font-size: 18px; 
  padding: 2vh; }

.rsvpTitle
{ font-size: 15vh; }

.rsvpButton
{ padding: 2vh 8vh; 
  border-radius: 15px; 
  background-color: rgba(255,255,255,0.2);
  border: 2px solid #fff; 
  font-size: 5vh;
  color: #fff;
  font-family: 'Amatic SC', cursive; }

.peLink
{ margin: 2vh 0; }

.peLink a
{ color: #9888ae;
  font-size: 20px; }

.peLink a:hover
{ color: rgba(152, 136, 174, 0.5);
  text-decoration: none;
  font-weight: bold; }

.rsvpButton:hover
{ text-decoration: none; 
  color: #aaa }

.element
{ text-align: center; 
  padding: 5vh 0 }

.elementLine
{ height: 2px;
  background-color: #9888ae; 
  margin: 5vh auto; }

.elementContent
{ color: #555; 
  font-size: 17px; 
  padding: 0 10vh;
  width: 100%; }

.contact
{ background-color: #9888ae;
  padding: 5vh 0;}

.contactContent
{ font-size: 18px;
  color: #ddd; 
  padding: 5vh 0; }

.contactContent a
{ text-decoration: none;
  color: #fff; }  

.contactContent a:hover
{ text-decoration: none;
  color: rgba(255,255,255,0.7);}

.contactLine
{ height: 2px;
  background-color: #eee; }

@media (min-width: 768px) { 
  .navbar .navbar-nav 
  { display: inline-block;
    float: none;
    vertical-align: top; }

  .navbar .navbar-collapse 
  { text-align: center; } 
}

@media (max-width: 768px) {
  .navLine
  { visibility: hidden; }

  .elementContent
  { padding: 0 5vh; }

  button.navbar-toggle
  { background-color: #9888ae;
    border: 0px; }

  .navbar-header
  { background-color: #9888ae; }
}

